Update pom.xml to enhance maven-surefire-plugin configuration for JDK compatibility. Add -XX:+IgnoreUnrecognizedVMOptions to ensure smooth operation on JDK 17/20 while maintaining support for JDK 21+. Revise README to include a new REVIEWER-CHECKLIST for streamlined review processes. Introduce REVIEWER-CHECKLIST.md as a centralized resource mapping engineering rules to code evidence, improving clarity for reviewers. Update SOLUTION.md to reflect changes in the maven-surefire-plugin settings and their implications for testing environments.